# ricelandbot

./: .flake8  .gitignore  Dockerfile  Jenkinsfile  README.md  pyproject.toml
ricelandbot/: __init__.py  callback_auth.py  main.py  matrix.py  reddit.py
tests/: test_ricelandbot.py
